# freerdp-rs

./: Cargo.toml
freerdp2/: Cargo.toml
freerdp2-sys/: Cargo.toml
freerdp2-sys/src/: bindgen.rs  freerdp.h  gen.sh  lib.rs
freerdp2/examples/: client.rs
freerdp2/src/: connection_type.rs  error.rs  freerdp.rs  graphics.rs  input.rs  lib.rs  locale.rs  pixel_format.rs  settings.rs  update.rs  winpr.rs
freerdp2/src/channels/: audin.rs  cliprdr.rs  disp.rs  drdynvc.rs  echo.rs  encomsp.rs  geometry.rs  gfxredir.rs  mod.rs  rail.rs  rdp2tcp.rs  rdpdr.rs  rdpecam.rs  rdpei.rs  rdpgfx.rs  rdpsnd.rs  remdesk.rs  tsmf.rs  urbdrc.rs  video.rs
freerdp2/src/client/: cliprdr.rs  context.rs  custom.rs  disp.rs  encomsp.rs  mod.rs  pub_sub.rs  rdpei.rs  rdpgfx.rs  video.rs
freerdp2/src/gdi/: gfx.rs  mod.rs  video.rs
