[package]
name = "freerdp2"
description = "FreeRDP bindings"
homepage = "https://www.freerdp.com/"
repository = "https://github.com/elmarco/freerdp-rs"
edition = "2021"
version = "0.2.0"
license = "Apache-2.0"

[dependencies]
freerdp2-sys = { version = "0.2", path = "../freerdp2-sys" }
bitflags = "2"
